ci: disable release signing
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -233,14 +233,14 @@ jobs:
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-          # MacOS Signing:
-          ENABLE_CODE_SIGNING: ${{ secrets.APPLE_CERTIFICATE }}
-          APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
-          APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
-          APPLE_SIGNING_IDENTITY: ${{ secrets.APPLE_SIGNING_IDENTITY }}
-          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-          APPLE_ID: ${{ secrets.APPLE_ID }}
-          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
+          # Apple developer account required for MacOS Signing:
+          # ENABLE_CODE_SIGNING: ${{ secrets.APPLE_CERTIFICATE }}
+          # APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
+          # APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
+          # APPLE_SIGNING_IDENTITY: ${{ secrets.APPLE_SIGNING_IDENTITY }}
+          # APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+          # APPLE_ID: ${{ secrets.APPLE_ID }}
+          # APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
           CI: false # https://github.com/tauri-apps/tauri-action/issues/740
 
       - name: Build linux tar.gz
@@ -252,32 +252,33 @@ jobs:
 
           mv DevPod-desktop.tar.gz ../../DevPod-${{needs.create-release.outputs.package_version}}.tar.gz
 
-      - name: Prepare Windows Signing Tool
-        if: matrix.settings.host == 'windows-latest' && matrix.settings.cli_only == false
-        run: |
-          $destination_path = "$Env:USERPROFILE\code-signing"
-          $download_url = "$Env:CODESIGNTOOL_DOWNLOAD_URL"
-
-          # Create the directory if it doesn't exist
-          New-Item -ItemType Directory -Force -Path $destination_path | Out-Null
-          Write-Output "Starting to download CodeSignTool from $download_url"
-
-          Invoke-WebRequest -Uri $download_url -OutFile codesigntool.zip
-
-          Write-Output "Unzipping codesigntool.zip to $destination_path"
-          Expand-Archive "codesigntool.zip" -DestinationPath $destination_path
-
-          Add-Content -Path $env:GITHUB_PATH -Value $destination_path
-          # This is requried in addition to setting the PATH because of how CodeSignTool wrote their batch script
-          "CODE_SIGN_TOOL_PATH=$destination_path" | Out-File -FilePath $env:GITHUB_ENV -Append
-        env:
-          CODESIGNTOOL_DOWNLOAD_URL: ${{ vars.CODESIGNTOOL_DOWNLOAD_URL }}
-
-      - name: Print Signing Tool Version
-        if: matrix.settings.host == 'windows-latest' && matrix.settings.cli_only == false
-        run: |
-          Write-Output "Attempting to get CodeSignTool version"
-          CodeSignTool.bat --version
+      # Requires Windows code signing certificate:
+      # - name: Prepare Windows Signing Tool
+      #   if: matrix.settings.host == 'windows-latest' && matrix.settings.cli_only == false
+      #   run: |
+      #     $destination_path = "$Env:USERPROFILE\code-signing"
+      #     $download_url = "$Env:CODESIGNTOOL_DOWNLOAD_URL"
+      #
+      #     # Create the directory if it doesn't exist
+      #     New-Item -ItemType Directory -Force -Path $destination_path | Out-Null
+      #     Write-Output "Starting to download CodeSignTool from $download_url"
+      #
+      #     Invoke-WebRequest -Uri $download_url -OutFile codesigntool.zip
+      #
+      #     Write-Output "Unzipping codesigntool.zip to $destination_path"
+      #     Expand-Archive "codesigntool.zip" -DestinationPath $destination_path
+      #
+      #     Add-Content -Path $env:GITHUB_PATH -Value $destination_path
+      #     # This is requried in addition to setting the PATH because of how CodeSignTool wrote their batch script
+      #     "CODE_SIGN_TOOL_PATH=$destination_path" | Out-File -FilePath $env:GITHUB_ENV -Append
+      #   env:
+      #     CODESIGNTOOL_DOWNLOAD_URL: ${{ vars.CODESIGNTOOL_DOWNLOAD_URL }}
+      #
+      # - name: Print Signing Tool Version
+      #   if: matrix.settings.host == 'windows-latest' && matrix.settings.cli_only == false
+      #   run: |
+      #     Write-Output "Attempting to get CodeSignTool version"
+      #     CodeSignTool.bat --version
 
       - name: Build Desktop App
         if: matrix.settings.host == 'windows-latest' && matrix.settings.cli_only == false
@@ -292,30 +293,32 @@ jobs:
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-          CODESIGNTOOL_USERNAME: ${{ secrets.CODESIGNTOOL_USERNAME }}
-          CODESIGNTOOL_PASSWORD: ${{ secrets.CODESIGNTOOL_PASSWORD }}
-          CODESIGNTOOL_TOTP_SECRET: ${{ secrets.CODESIGNTOOL_TOTP_SECRET }}
-          CODESIGNTOOL_CREDENTIAL_ID: ${{ secrets.CODESIGNTOOL_CREDENTIAL_ID }}
+          # Requires a Windows code signing certificate:
+          # CODESIGNTOOL_USERNAME: ${{ secrets.CODESIGNTOOL_USERNAME }}
+          # CODESIGNTOOL_PASSWORD: ${{ secrets.CODESIGNTOOL_PASSWORD }}
+          # CODESIGNTOOL_TOTP_SECRET: ${{ secrets.CODESIGNTOOL_TOTP_SECRET }}
+          # CODESIGNTOOL_CREDENTIAL_ID: ${{ secrets.CODESIGNTOOL_CREDENTIAL_ID }}
 
-      - name: Sign Windows Sidecar Binary
-        if: matrix.settings.host == 'windows-latest'
-        shell: powershell
-        env:
-          CODESIGNTOOL_USERNAME: ${{ secrets.CODESIGNTOOL_USERNAME }}
-          CODESIGNTOOL_PASSWORD: ${{ secrets.CODESIGNTOOL_PASSWORD }}
-          CODESIGNTOOL_TOTP_SECRET: ${{ secrets.CODESIGNTOOL_TOTP_SECRET }}
-          CODESIGNTOOL_CREDENTIAL_ID: ${{ secrets.CODESIGNTOOL_CREDENTIAL_ID }}
-        run: |
-          $username = "$Env:CODESIGNTOOL_USERNAME"
-          $password = "$Env:CODESIGNTOOL_PASSWORD"
-          $totp_secret = "$Env:CODESIGNTOOL_TOTP_SECRET"
-          $credential_id = "$Env:CODESIGNTOOL_CREDENTIAL_ID"
-
-          $cli_input_file_path = "desktop\src-tauri\bin\devpod-cli-${{ matrix.settings.target }}.exe"
-
-          Write-Output "Signing files"
-          $cli_input_file_path = Resolve-Path  "$cli_input_file_path" | select -ExpandProperty Path
-          CodeSignTool.bat sign -username="$username" -password="$password" -totp_secret="$totp_secret" -credential_id="$credential_id" -input_file_path="$cli_input_file_path" -override
+      # Requires a Windows code signing certificate:
+      # - name: Sign Windows Sidecar Binary
+      #   if: matrix.settings.host == 'windows-latest'
+      #   shell: powershell
+      #   env:
+      #     CODESIGNTOOL_USERNAME: ${{ secrets.CODESIGNTOOL_USERNAME }}
+      #     CODESIGNTOOL_PASSWORD: ${{ secrets.CODESIGNTOOL_PASSWORD }}
+      #     CODESIGNTOOL_TOTP_SECRET: ${{ secrets.CODESIGNTOOL_TOTP_SECRET }}
+      #     CODESIGNTOOL_CREDENTIAL_ID: ${{ secrets.CODESIGNTOOL_CREDENTIAL_ID }}
+      #   run: |
+      #     $username = "$Env:CODESIGNTOOL_USERNAME"
+      #     $password = "$Env:CODESIGNTOOL_PASSWORD"
+      #     $totp_secret = "$Env:CODESIGNTOOL_TOTP_SECRET"
+      #     $credential_id = "$Env:CODESIGNTOOL_CREDENTIAL_ID"
+      #
+      #     $cli_input_file_path = "desktop\src-tauri\bin\devpod-cli-${{ matrix.settings.target }}.exe"
+      #
+      #     Write-Output "Signing files"
+      #     $cli_input_file_path = Resolve-Path  "$cli_input_file_path" | select -ExpandProperty Path
+      #     CodeSignTool.bat sign -username="$username" -password="$password" -totp_secret="$totp_secret" -credential_id="$credential_id" -input_file_path="$cli_input_file_path" -override
 
       - name: Upload Release Asset
         if: matrix.settings.host == 'windows-latest'
