ci: run workflows on pull requests
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/build-devcontainer-image.yaml
+++ b/.github/workflows/build-devcontainer-image.yaml
@@ -1,12 +1,10 @@
 name: Build Dev Container
 
 on:
-  workflow_dispatch:
   push:
-    branches:
-      - "main"
-    paths:
-      - ".github/devcontainer/**"
+    branches: ["main"]
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   build-and-push:
