--- a/.github/workflows/ui-ci.yaml
+++ b/.github/workflows/ui-ci.yaml
@@ -1,13 +1,8 @@
 name: UI CI
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
   pull_request:
-    branches:
-      - main
-      - release-*
-    paths:
-      - desktop/
 
 jobs:
   check:
