--- a/.github/workflows/e2e-win-full-tests.yaml
+++ b/.github/workflows/e2e-win-full-tests.yaml
@@ -3,10 +3,8 @@ name: E2E Win full tests
 on:
   release:
     types: [prereleased]
-  workflow_dispatch: {}
-concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
-  cancel-in-progress: true
+  workflow_dispatch:
+  pull_request:
 
 env:
   GO111MODULE: on
