--- a/.github/workflows/go-licenses-check.yaml
+++ b/.github/workflows/go-licenses-check.yaml
@@ -1,13 +1,8 @@
 name: go-licenses-check
 
 on:
+  workflow_dispatch:
   pull_request:
-    branches:
-      - main
-    paths:
-      - .github/workflows/go-licenses-check.yaml
-      - go.mod
-  workflow_dispatch: {}
 
 concurrency:
   group: ${{ github.workflow }}-$${{ github.head_ref || github.run_id }}
