--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -1,25 +1,8 @@
 name: Unit tests
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
   pull_request:
-    types:
-      - opened
-      - reopened
-      - synchronize
-      - edited
-    branches:
-      - main
-    paths:
-      - "**.go"
-      - "hack/unit-tests.sh"
-      - ".github/workflows/unit-tests.yaml"
-      - "!/docs/**"
-
-# make sure the pipeline is only running once
-concurrency:
-  group: unit-${{ github.head_ref || github.ref_name }}
-  cancel-in-progress: true
 
 jobs:
   unit-tests:
