--- a/.github/workflows/build-devcontainer-image.yaml
+++ b/.github/workflows/build-devcontainer-image.yaml
@@ -51,31 +51,31 @@ jobs:
               exit 0 
             fi 
             docker image ls
-            docker tag $ID ghcr.io/loft-sh/devpod:dev-$ARCH
-            docker push ghcr.io/loft-sh/devpod:dev-$ARCH
+            docker tag $ID ghcr.io/skevetter/devpod:dev-$ARCH
+            docker push ghcr.io/skevetter/devpod:dev-$ARCH
           done
           SUFFIX="${{github.sha}}"
           IMAGE_NAME="devpod:dev-$SUFFIX"
           echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
           # Combine into multi-arch image
-          docker manifest create ghcr.io/loft-sh/$IMAGE_NAME \
-                 --amend ghcr.io/loft-sh/devpod:dev-amd64 \
-                 --amend ghcr.io/loft-sh/devpod:dev-arm64
+          docker manifest create ghcr.io/skevetter/$IMAGE_NAME \
+                 --amend ghcr.io/skevetter/devpod:dev-amd64 \
+                 --amend ghcr.io/skevetter/devpod:dev-arm64
 
-          docker manifest push ghcr.io/loft-sh/$IMAGE_NAME
+          docker manifest push ghcr.io/skevetter/$IMAGE_NAME
 
       - name: Update devcontainer.json
         if: ${{ success() }}
         run: |
-          sed -i "s|\(\"image\": \"\).*|\1ghcr.io/loft-sh/${IMAGE_NAME}\",|" .devcontainer/devcontainer.json
+          sed -i "s|\(\"image\": \"\).*|\1ghcr.io/skevetter/${IMAGE_NAME}\",|" .devcontainer/devcontainer.json
 
       - name: Create Pull Request
         if: ${{ success() }}
         uses: peter-evans/create-pull-request@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "Update devcontainer image to ghcr.io/loft-sh/${{ env.IMAGE_NAME }}"
+          commit-message: "Update devcontainer image to ghcr.io/skevetter/${{ env.IMAGE_NAME }}"
           title: "Update devcontainer image"
-          body: "This PR updates the devcontainer image to ghcr.io/loft-sh/${{ env.IMAGE_NAME }}"
+          body: "This PR updates the devcontainer image to ghcr.io/skevetter/${{ env.IMAGE_NAME }}"
           branch: "update-devcontainer-${{ github.sha }}"
           base: "main"
