--- a/.github/workflows/build-devcontainer-image.yaml
+++ b/.github/workflows/build-devcontainer-image.yaml
@@ -32,9 +32,10 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
 
+      # TODO: Update release path
       - name: Prepare DevPod
         run: |
-          curl -L -o devpod "https://github.com/skevetter/devpod/releases/latest/download/devpod-linux-amd64" \
+          curl -L -o devpod "https://github.com/loft-sh/devpod/releases/latest/download/devpod-linux-amd64" \
             && sudo install -c -m 0755 devpod /usr/local/bin \
             && rm -f devpod
           devpod provider add docker
