--- a/.github/workflows/stale.yaml
+++ b/.github/workflows/stale.yaml
@@ -1,7 +1,8 @@
 name: Close inactive issues
 on:
-  schedule:
-    - cron: "30 1 * * *"
+  workflow_dispatch:
+  # schedule:
+  #   - cron: "30 1 * * *"
 
 jobs:
   close-issues:
