fixup!: change runner to window-latest
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -73,8 +73,7 @@ jobs:
           GH_ACCESS_TOKEN: ${{ secrets.GH_PRIVATE_REPO_TOKEN_TEST }}
 
   test-e2e-windows:
-    runs-on: self-hosted-windows
-    # We run this only on PRs, for pre-releases we run the full separate workflow
+    runs-on: windows-latest
     if: ${{ github.event_name == 'pull_request' }}
     strategy:
       fail-fast: true
