fixup!: add step to free disk space
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -33,6 +33,14 @@ jobs:
           - "context"
 
     steps:
+      - name: Free disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /usr/local/share/boost
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+          docker system prune -af
+
       - name: Checkout repo
         uses: actions/checkout@v2
 
