--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -82,7 +82,7 @@ jobs:
       - name: E2E test
         working-directory: ./e2e
         run: |
-          sudo KUBECONFIG=/home/runner/.kube/config \
+          sudo env "PATH=$PATH" "GOROOT=$GOROOT" KUBECONFIG=/home/runner/.kube/config \
             GH_USERNAME=${GH_USERNAME} \
             GH_ACCESS_TOKEN=${GH_ACCESS_TOKEN} \
             go test -v -ginkgo.v -timeout 3600s --ginkgo.label-filter=${{ matrix.label }}
