--- a/.github/workflows/build-devcontainer-image.yaml
+++ b/.github/workflows/build-devcontainer-image.yaml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Checkout
         id: checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v6
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
@@ -41,6 +41,7 @@ jobs:
           devpod provider add docker
 
       - name: "Build and push image"
+        if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
           for ARCH in amd64 arm64; do
             # Build for $ARCH
