--- a/.github/workflows/go-licenses-check.yaml
+++ b/.github/workflows/go-licenses-check.yaml
@@ -13,10 +13,10 @@ jobs:
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - name: Setup Golang with cache
+        uses: magnetikonline/action-golang-cache@v5
         with:
           go-version-file: go.mod
 
