--- a/.github/workflows/ui-ci.yaml
+++ b/.github/workflows/ui-ci.yaml
@@ -12,12 +12,12 @@ jobs:
         working-directory: ./desktop
     steps:
       - name: checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: setup node
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
         with:
-          node-version: "20"
+          node-version: "latest"
 
       - name: install dependencies
         run: yarn install --frozen-lockfile
