--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -46,6 +46,7 @@ jobs:
         uses: magnetikonline/action-golang-cache@v5
         with:
           go-version-file: go.mod
+          cache-key-suffix: "-${{ matrix.label }}"
 
       - name: Set up kind k8s cluster
         uses: engineerd/setup-kind@v0.5.0
