fixup!: update cache suffix
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -57,7 +57,7 @@ jobs:
         uses: magnetikonline/action-golang-cache@v5
         with:
           go-version-file: go.mod
-          cache-key-suffix: "-${{ matrix.label }}"
+          cache-key-suffix: "e2e-tests"
 
       - name: Set up kind k8s cluster
         uses: engineerd/setup-kind@v0.5.0
