fixup!: update to go 1.25
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -155,10 +155,11 @@ jobs:
         with:
           workspaces: "./desktop/src-tauri -> target"
 
-      - name: Go setup
-        uses: actions/setup-go@v2
+      - name: Setup Golang with cache
+        uses: magnetikonline/action-golang-cache@v5
         with:
-          go-version: 1.21.8
+          go-version-file: go.mod
+          cache-key-suffix: "release"
 
       - name: Build Sidecar CLI
         if: matrix.settings.host != 'windows-latest'
