--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -22,6 +22,18 @@ jobs:
           go-version-file: go.mod
           cache-key-suffix: "e2e-tests"
 
+      - name: Build binary
+        working-directory: ./e2e
+        run: |
+          chmod +x ../hack/build-e2e.sh
+          BUILDDIR=bin SRCDIR=".." ../hack/build-e2e.sh
+
+      - name: Cache built binary
+        uses: actions/cache@v4
+        with:
+          path: ./e2e/bin
+          key: ${{ runner.os }}-e2e-binary-${{ github.sha }}
+
   test-e2e:
     needs: setup-cache
     runs-on: ubuntu-latest
@@ -56,40 +68,34 @@ jobs:
           - "context"
 
     steps:
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        with:
+          root-reserve-mb: 512
+          swap-size-mb: 1024
+          remove-dotnet: "true"
+
       - name: Checkout repo
         uses: actions/checkout@v6
 
-      - name: Free disk space
-        run: |
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf /opt/ghc
-          sudo rm -rf /usr/local/share/boost
-          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
-
-      - name: Restore Golang cache
-        uses: magnetikonline/action-golang-cache@v5
+      - name: Restore binary
+        uses: actions/cache/restore@v4
         with:
-          go-version-file: go.mod
-          cache-key-suffix: "e2e-tests"
+          path: ./e2e/bin
+          key: ${{ runner.os }}-e2e-binary-${{ github.sha }}
 
-      - name: Set up kind k8s cluster
+      - name: cluster setup
         uses: engineerd/setup-kind@v0.5.0
         with:
           version: "v0.20.0"
           image: kindest/node:v1.27.3
 
-      - name: Testing kind cluster set-up
+      - name: Cluster info
         run: |
           kubectl cluster-info
           kubectl get pods -n kube-system -v 10
           echo "kubectl config current-context:" $(kubectl config current-context)
           echo "KUBECONFIG env var:" ${KUBECONFIG}
-
-      - name: Build binary and copy to the E2E directory
-        working-directory: ./e2e
-        run: |
-          chmod +x ../hack/build-e2e.sh
-          BUILDDIR=bin SRCDIR=".." ../hack/build-e2e.sh
 
       - name: E2E test
         working-directory: ./e2e
