--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -17,7 +17,7 @@ jobs:
 
       - uses: actions/checkout@v6
 
-      - name: Setup Golang with cache
+      - name: Setup Go with cache
         uses: magnetikonline/action-golang-cache@v5
         with:
           go-version-file: go.mod
@@ -94,6 +94,12 @@ jobs:
           kubectl get pods -n kube-system -v 10
           echo "kubectl config current-context:" $(kubectl config current-context)
           echo "KUBECONFIG env var:" ${KUBECONFIG}
+
+      - name: Restore Go cache
+        uses: magnetikonline/action-golang-cache@v5
+        with:
+          go-version-file: go.mod
+          cache-key-suffix: "e2e-tests"
 
       - name: E2E test
         working-directory: ./e2e
