--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -17,7 +17,7 @@ jobs:
 
       - uses: actions/checkout@v6
 
-      - name: Setup Go with cache
+      - name: Setup Go
         uses: magnetikonline/action-golang-cache@v5
         with:
           go-version-file: go.mod
@@ -28,7 +28,7 @@ jobs:
           mkdir -p ./e2e/bin
           CGO_ENABLED=0 go build -ldflags "-s -w" -o ./e2e/bin/devpod-linux-amd64
 
-      - name: Cache built binary
+      - name: Cache binary
         uses: actions/cache@v4
         with:
           path: ./e2e/bin
@@ -69,7 +69,7 @@ jobs:
 
     steps:
       - uses: jlumbroso/free-disk-space@v1.3.1
-      
+
       - uses: actions/checkout@v6
 
       - name: Restore Go cache
@@ -89,7 +89,7 @@ jobs:
           mkdir -p /tmp/devpod-cache
           cp ./e2e/bin/devpod-linux-amd64 /tmp/devpod-cache/devpod-linux-amd64
 
-      - name: cluster setup
+      - name: Cluster setup
         uses: engineerd/setup-kind@v0.5.0
         with:
           version: "v0.20.0"
