--- a/.github/actions/run-integration-test/action.yml
+++ b/.github/actions/run-integration-test/action.yml
@@ -36,8 +36,9 @@ runs:
     - name: Setup kind
       uses: engineerd/setup-kind@v0.6.2
       with:
-        version: "v0.20.0"
-        image: kindest/node:v1.27.3
+        version: "v0.24.0"
+        image: kindest/node:v1.34.0
+        name: kind-${{ inputs.label }}
 
     - name: Cluster info
       shell: bash
