--- a/.github/actions/compile-test-binary/action.yml
+++ b/.github/actions/compile-test-binary/action.yml
@@ -13,4 +13,4 @@ runs:
       shell: bash
       run: |
         go generate ./...
-        CGO_ENABLED=0 go build main.go
+        CGO_ENABLED=0 go build main.go -o e2e/bin/devpod-linux-amd64
