fixup!: build to expected linux binary for unit test
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/compile-test-binary/action.yml
+++ b/.github/actions/compile-test-binary/action.yml
@@ -13,4 +13,4 @@ runs:
       shell: bash
       run: |
         go generate ./...
-        CGO_ENABLED=0 go build main.go -o e2e/bin/devpod-linux-amd64
+        CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build main.go
