--- a/.github/actions/run-integration-test/action.yml
+++ b/.github/actions/run-integration-test/action.yml
@@ -37,7 +37,7 @@ runs:
       uses: engineerd/setup-kind@v0.6.2
       with:
         version: "v0.24.0"
-        image: kindest/node:v1.34.0
+        image: kindest/node:v1.34.0@sha256:7416a61b42b1662ca6ca89f02028ac133a309a2a30ba309614e8ec94d976dc5a
         name: kind-${{ inputs.label }}
 
     - name: Cluster info
