--- a/.github/actions/run-integration-test/action.yml
+++ b/.github/actions/run-integration-test/action.yml
@@ -40,23 +40,11 @@ runs:
         image: kindest/node:v1.34.0@sha256:7416a61b42b1662ca6ca89f02028ac133a309a2a30ba309614e8ec94d976dc5a
         name: kind-${{ inputs.label }}
 
-    - name: Cluster info
-      shell: bash
-      run: |
-        export KUBECONFIG="${HOME}/.kube/config"
-        kubectl config use-context kind-kind-${{ inputs.label }}
-        kubectl cluster-info
-        kubectl get pods -n kube-system -v 10
-        echo "kubectl config current-context:" $(kubectl config current-context)
-        echo "KUBECONFIG env var:" ${KUBECONFIG}
-
-    - name: Run E2E test
+    - name: Run test
       shell: bash
       working-directory: ./e2e
+      env:
+        GH_USERNAME: ${{ inputs.gh-username }}
+        GH_ACCESS_TOKEN: ${{ inputs.gh-access-token }}
       run: |
-        export KUBECONFIG="${HOME}/.kube/config"
-        kubectl config use-context kind-kind-${{ inputs.label }}
-        sudo env "PATH=$PATH" "GOROOT=$GOROOT" "KUBECONFIG=${KUBECONFIG}" \
-          GH_USERNAME="${{ inputs.gh-username }}" \
-          GH_ACCESS_TOKEN="${{ inputs.gh-access-token }}" \
-          go test -v -ginkgo.v -timeout 3600s --ginkgo.label-filter=${{ inputs.label }}
+        sudo -E go test -v -ginkgo.v -timeout 3600s --ginkgo.label-filter=${{ inputs.label }}
