--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -13,6 +13,4 @@ jobs:
       # TODO: update 'uses' to @main when action is published
       - uses: ./.github/actions/compile-test-binary
 
-      - uses: robherley/go-test-action@v0
-        with:
-          testArguments: '-race -coverprofile=coverage.out -covermode=atomic ./... -skip="^Test.*E2E$"'
+      - run: ./hack/unit-tests.sh
