fixup!: kind name
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/run-integration-test/action.yml
+++ b/.github/actions/run-integration-test/action.yml
@@ -38,7 +38,7 @@ runs:
       with:
         version: "v0.24.0"
         image: kindest/node:v1.34.0@sha256:7416a61b42b1662ca6ca89f02028ac133a309a2a30ba309614e8ec94d976dc5a
-        name: kind-${{ inputs.label }}
+        name: ${{ inputs.label }}
 
     - name: Setup SSH directory
       shell: bash
