--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -10,14 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
-      - name: Setup Go
-        uses: magnetikonline/action-golang-cache@v5
-        with:
-          go-version-file: go.mod
+      # TODO: update 'uses' to @main when action is published
+      - uses: ./.github/actions/compile-test-binary
 
-      - name: Build
-        run: go generate ./... && CGO_ENABLED=0 go build main.go
-
-      - uses: robherley/go-test-action@v0
-        with:
-          testArguments: '-race -coverprofile=coverage.out -covermode=atomic ./... -skip="^Test.*E2E$"'
+      - run: ./hack/unit-tests.sh
