--- a/.github/actions/run-integration-test/action.yml
+++ b/.github/actions/run-integration-test/action.yml
@@ -54,6 +54,11 @@ runs:
         sudo apt-get update -qq
         sudo apt-get install -y openssh-server
         sudo systemctl restart ssh
+        sudo systemctl status ssh
+        ssh-keygen -t rsa -N "" -f ~/.ssh/id_rsa -q || true
+        cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
+        chmod 600 ~/.ssh/authorized_keys
+        ssh -o StrictHostKeyChecking=no -o BatchMode=yes localhost echo "SSH test successful"
 
     - name: Run test
       shell: bash
@@ -61,7 +66,4 @@ runs:
       env:
         GH_USERNAME: ${{ inputs.gh-username }}
         GH_ACCESS_TOKEN: ${{ inputs.gh-access-token }}
-        KUBECONFIG: /home/runner/.kube/config
-      run: |
-        printenv 
-        sudo -E go test -v -ginkgo.v -timeout 3600s --ginkgo.label-filter=${{ inputs.label }}
+      run: go test -v -ginkgo.v -timeout 3600s --ginkgo.label-filter=${{ inputs.label }}
