--- a/.github/workflows/test-integration.yaml
+++ b/.github/workflows/test-integration.yaml
@@ -17,23 +17,51 @@ jobs:
 
       - name: Build binary
         run: |
+          echo "=== Building binary ==="
           mkdir -p ./e2e/bin
           go build -o ./e2e/bin/devpod-linux-amd64
           chmod +x ./e2e/bin/devpod-linux-amd64
+          echo "=== Binary built ==="
+          ls -lh ./e2e/bin/
 
       - name: Setup SSH
         run: |
+          echo "=== Installing SSH server ==="
           sudo apt-get update -qq
           sudo apt-get install -y openssh-server
+          
+          echo "=== Starting SSH service ==="
           sudo systemctl start ssh
           sudo systemctl status ssh
+          
+          echo "=== Setting up SSH keys ==="
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
           ssh-keygen -t rsa -N "" -f ~/.ssh/id_rsa -q
           cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
           chmod 600 ~/.ssh/authorized_keys
+          
+          echo "=== Adding user to docker group ==="
+          sudo usermod -aG docker $USER
+          echo "Current groups:"
+          groups
+          
+          echo "=== Testing SSH connection ==="
           ssh -o StrictHostKeyChecking=no localhost echo "SSH works"
+          
+          echo "=== Testing Docker over SSH ==="
+          ssh -o StrictHostKeyChecking=no localhost docker ps || echo "Docker not accessible over SSH yet"
+          
+          echo "=== Docker socket permissions ==="
+          ls -la /var/run/docker.sock
+          
+          echo "=== Testing Docker locally ==="
+          docker ps
 
       - name: Run integration test
         working-directory: ./e2e
-        run: go test -v -ginkgo.v -timeout 600s --ginkgo.label-filter=integration
+        run: |
+          echo "=== Running integration tests ==="
+          echo "Working directory: $(pwd)"
+          echo "Binary location: $(ls -lh bin/)"
+          go test -v -ginkgo.v -timeout 600s --ginkgo.label-filter=integration
