--- a/.github/actions/run-integration-test/action.yml
+++ b/.github/actions/run-integration-test/action.yml
@@ -45,41 +45,41 @@ runs:
         image: kindest/node:v1.34.0@sha256:7416a61b42b1662ca6ca89f02028ac133a309a2a30ba309614e8ec94d976dc5a
         name: ${{ inputs.label }}
 
-    - name: Setup SSH directory
-      shell: bash
-      run: mkdir -p ~/.ssh && chmod 700 ~/.ssh
+    # - name: Setup SSH directory
+    #   shell: bash
+    #   run: mkdir -p ~/.ssh && chmod 700 ~/.ssh
 
-    - name: Setup SSH server
-      shell: bash
-      run: |
-        echo "=== Installing SSH server ==="
-        sudo apt-get update -qq
-        sudo apt-get install -y openssh-server
-        
-        echo "=== Starting SSH service ==="
-        sudo systemctl restart ssh
-        sudo systemctl status ssh
-        
-        echo "=== Generating SSH keys ==="
-        ssh-keygen -t rsa -N "" -f ~/.ssh/id_rsa -q || true
-        cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
-        chmod 600 ~/.ssh/authorized_keys
-        
-        echo "=== Adding user to docker group ==="
-        sudo usermod -aG docker $USER
-        groups
-        
-        echo "=== Testing SSH connection ==="
-        ssh -o StrictHostKeyChecking=no -o BatchMode=yes localhost echo "SSH works"
-        
-        echo "=== Testing Docker over SSH ==="
-        ssh -o StrictHostKeyChecking=no -o BatchMode=yes localhost docker ps || echo "Docker not accessible over SSH"
-        
-        echo "=== Checking Docker socket permissions ==="
-        ls -la /var/run/docker.sock
-        
-        echo "=== Testing Docker locally ==="
-        docker ps
+    # - name: Setup SSH server
+    #   shell: bash
+    #   run: |
+    #     echo "=== Installing SSH server ==="
+    #     sudo apt-get update -qq
+    #     sudo apt-get install -y openssh-server
+
+    #     echo "=== Starting SSH service ==="
+    #     sudo systemctl restart ssh
+    #     sudo systemctl status ssh
+
+    #     echo "=== Generating SSH keys ==="
+    #     ssh-keygen -t rsa -N "" -f ~/.ssh/id_rsa -q || true
+    #     cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
+    #     chmod 600 ~/.ssh/authorized_keys
+
+    #     echo "=== Adding user to docker group ==="
+    #     sudo usermod -aG docker $USER
+    #     groups
+
+    #     echo "=== Testing SSH connection ==="
+    #     ssh -o StrictHostKeyChecking=no -o BatchMode=yes localhost echo "SSH works"
+
+    #     echo "=== Testing Docker over SSH ==="
+    #     ssh -o StrictHostKeyChecking=no -o BatchMode=yes localhost docker ps || echo "Docker not accessible over SSH"
+
+    #     echo "=== Checking Docker socket permissions ==="
+    #     ls -la /var/run/docker.sock
+
+    #     echo "=== Testing Docker locally ==="
+    #     docker ps
 
     - name: Run test
       shell: bash
