fixup!: update image from bullseye to go:1-bookworm
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/e2e/tests/up/testdata/docker-compose-overrides/docker-compose.yaml
+++ b/e2e/tests/up/testdata/docker-compose-overrides/docker-compose.yaml
@@ -2,6 +2,6 @@ version: '3'
 
 services:
   app:
-    image: mcr.microsoft.com/devcontainers/go:0-1.19-bullseye
+    image: mcr.microsoft.com/devcontainers/go:1-bookworm
     volumes:
       - .:/workspaces:cached
