fixup!: install kind for label build also
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/run-integration-test/action.yml
+++ b/.github/actions/run-integration-test/action.yml
@@ -38,7 +38,7 @@ runs:
       run: chmod +x ./e2e/bin/devpod-linux-amd64
 
     - name: Setup kind
-      if: contains(inputs.label, 'kubernetes')
+      if: contains(inputs.label, 'kubernetes') || contains(inputs.label, 'build')
       uses: engineerd/setup-kind@v0.6.2
       with:
         version: "v0.24.0"
