--- a/.github/actions/run-integration-test/action.yml
+++ b/.github/actions/run-integration-test/action.yml
@@ -5,6 +5,10 @@ inputs:
   label:
     description: Test label to filter
     required: true
+  needs-kind:
+    description: Whether this test needs kind
+    required: false
+    default: 'false'
   gh-username:
     description: GitHub username for private repo tests
     required: true
@@ -38,7 +42,7 @@ runs:
       run: chmod +x ./e2e/bin/devpod-linux-amd64
 
     - name: Setup kind
-      if: contains(inputs.label, 'kubernetes') || contains(inputs.label, 'build')
+      if: inputs.needs-kind == 'true'
       uses: engineerd/setup-kind@v0.6.2
       with:
         version: "v0.24.0"
